[gd_scene load_steps=18 format=2]

[ext_resource path="res://Effects/Explosion/12.png" type="Texture" id=1]
[ext_resource path="res://Effects/Explosion/1.png" type="Texture" id=2]
[ext_resource path="res://Effects/Explosion/3.png" type="Texture" id=3]
[ext_resource path="res://Effects/Explosion/5.png" type="Texture" id=4]
[ext_resource path="res://Effects/Explosion/9.png" type="Texture" id=5]
[ext_resource path="res://Effects/Explosion/7.png" type="Texture" id=6]
[ext_resource path="res://Effects/Explosion/2.png" type="Texture" id=7]
[ext_resource path="res://Effects/Explosion/10.png" type="Texture" id=8]
[ext_resource path="res://Effects/Explosion/11.png" type="Texture" id=9]
[ext_resource path="res://Effects/Explosion/6.png" type="Texture" id=10]
[ext_resource path="res://Effects/Explosion/4.png" type="Texture" id=11]
[ext_resource path="res://Effects/Explosion/8.png" type="Texture" id=12]
[ext_resource path="res://Effects/Explosion/Explosion.gd" type="Script" id=16]

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../CPUParticles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../CPUParticles2D3:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Explosion" type="Node2D"]
script = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CPUParticles2D")
autoplay = "Default"
anims/Default = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
playing = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 1
lifetime = 0.6
one_shot = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 90.0
angular_velocity = 30.0
angular_velocity_random = 0.2
damping = 100.0
scale_amount = 0.9
color_ramp = SubResource( 4 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
amount = 1
lifetime = 0.6
one_shot = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 90.0
angular_velocity = 30.0
angular_velocity_random = 0.2
damping = 100.0
scale_amount = 0.9
color_ramp = SubResource( 4 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
amount = 1
lifetime = 0.6
one_shot = true
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 90.0
angular_velocity = 30.0
angular_velocity_random = 0.2
damping = 100.0
scale_amount = 0.9
color_ramp = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
volume_db = -25.0
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
